<resources>
    <string name="app_name">Collectcontacts</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="Home">Home</string>
    <string name="Groups">Groups</string>

    <string name="setting">setting</string>
    <string name="Lang">العربيه</string>
    <string name="About_us">About Us</string>

    <string name="Login">Login</string>
    <string name="first_name">First Name</string>
    <string name="UserPhone">User phone</string>

    <string name="Email">Email</string>

    <string name="Password">Password</string>



    //home
    <string name="choose_sender">Sender Id</string>
    <string name="sender">sender</string>
    <string name="Add_SMS">Add SMS.... </string>
    <string name="contacts">Contacts</string>
    <string name="sendto">Send To :</string>
    <string name="select_all">Select All</string>
    <string name="AddGroup">Add Group </string>
    <string name="Send_SMS">Send SMS</string>

    <string name="balance_messages">Balance  messages </string>

</resources>